--- a/package.json
+++ b/package.json
@@ -22,28 +22,30 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.1",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-transition-group": "^4.4.4",
-    "@types/three": "^0.139.0",
-    "classnames": "^2.3.1",
-    "electron": "^18.0.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/node": "^20.12.10",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-transition-group": "^4.4.10",
+    "@types/three": "^0.164.0",
+    "classnames": "^2.5.1",
+    "electron": "^30.0.2",
+    "eslint-config-react-app": "^7.0.1",
     "glea": "^1.3.1",
-    "grunt": "^1.4.1",
-    "grunt-contrib-clean": "^2.0.0",
+    "grunt": "^1.6.1",
+    "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-electron": "^12.0.0",
-    "grunt-eslint": "^24.0.0",
+    "grunt-electron": "^13.0.0",
+    "grunt-eslint": "^24.3.0",
     "grunt-exec": "^3.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "react-transition-group": "^4.4.2",
-    "sass": "^1.50.0",
-    "three": "^0.139.2",
-    "typescript": "^4.6.3",
-    "unsplash-js": "^7.0.15"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.76.0",
+    "three": "^0.164.1",
+    "typescript": "^4.9.5",
+    "unsplash-js": "^7.0.19"
   },
   "homepage": "./",
   "eslintConfig": {
