--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/three": "^0.164.0",
     "classnames": "^2.5.1",
+    "copy-to-clipboard": "^3.3.3",
     "electron": "^30.0.2",
     "eslint-config-react-app": "^7.0.1",
     "glea": "^1.3.1",
