--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "grunt-electron": "^13.0.0",
     "grunt-eslint": "^24.3.0",
     "grunt-exec": "^3.0.0",
+    "localforage": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
